# styxsingularity

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  codecov.yaml  pyproject.toml
.github/workflows/: docs.yaml  publish-pypi.yaml  test.yaml
docs/pdoc-theme/: frame.html.jinja2
src/styxsingularity/: __init__.py  algorithms.py
tests/: test_dummy.py  test_fibonacci.py
