[project]
name = "styxsingularity"
version = "0.5.0"
description = "Singularity/Apptainer integration for Styx compiled wrappers"
authors = [
  { name = "Florian Rupprecht", email = "33600480+nx10@users.noreply.github.com" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = ["styxdefs>=0.5.0,<0.6"]

[dependency-groups]
dev = [
  "pytest>=8.2.2,<9",
  "mypy>=1.10.1,<2",
  "pre-commit>=4.0.1,<5",
  "pytest-cov>=6.0.0,<7",
  "ruff>=0.9.6,<0.10",
]
docs = ["pdoc>=15.0.0,<16"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
