[project]
name = "styxsingularity"
version = "0.5.1"
description = "Singularity/Apptainer integration for Styx compiled wrappers"
authors = [
  {name = "Florian Rupprecht", email = "33600480+nx10@users.noreply.github.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = ["styxdefs>=0.5.0,<0.6"]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "mypy>=1.17.1",
  "pre-commit>=4.3.0",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.12",
  "deptry>=0.23.0"
]
docs = ["pdoc>=15.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
